# ironcontext

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  demo.tape
.github/actions/ironcontext/: action.yml
.github/workflows/: ci.yml  release.yml
crates/ironcontext-cli/: Cargo.toml  README.md
crates/ironcontext-cli/src/: main.rs
crates/ironcontext-core/: Cargo.toml  README.md
crates/ironcontext-core/benches/: scan_latency.rs
crates/ironcontext-core/src/: lib.rs  manifest.rs  optimizer.rs  report.rs  ris.rs  rules.rs  sarif.rs
docs/: API.md  EXPERIMENTS.md  PLAN.md  RULES.md  SHIPPED.md
fixtures/: clean_manifest.json  large_manifest.json  poisoned_manifest.json
fixtures/demo/: clean_server.json  poisoned_server.json
python/: MANIFEST.in  README.md  pyproject.toml
python/ironcontext/: __init__.py  __main__.py
python/tests/: test_wrapper.py
scripts/: gen_large_fixture.py  mock_action_run.py
typescript/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
typescript/src/: index.ts
typescript/tests/: index.test.ts
