[workspace]
resolver = "2"
members = ["crates/ironcontext-core", "crates/ironcontext-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/altrusianco/ironcontext"
authors = ["Altrusian Computer <security@altrusian.com>"]
rust-version = "1.78"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
unicode-normalization = "0.1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
