[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ironcontext"
version = "0.1.0"
description = "Python wrapper around the IronContext Rust engine — security & optimization for MCP."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Altrusian Computer", email = "security@altrusian.com"}]
keywords = ["mcp", "model-context-protocol", "security", "llm", "agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
]

# Intentionally empty: the wrapper has zero runtime dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/altrusianco/ironcontext"
Issues = "https://github.com/altrusianco/ironcontext/issues"

[project.scripts]
ironcontext = "ironcontext.__main__:main"

[tool.setuptools]
packages = ["ironcontext"]
